--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ichis-redbutton-rending",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kimgtae12.github.io/haryoungil/",
   "dependencies": {
     "@atlaskit/css-reset": "^6.10.1",
     "@tanstack/react-query": "^5.48.0",
@@ -29,6 +30,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^12.23.24",
+    "gh-pages": "^6.3.0",
     "html-to-draftjs": "^1.5.0",
     "nanoid": "^3.0.0",
     "qrcode.react": "^3.1.0",
@@ -58,7 +60,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
